[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/menu/menu.gd" type="Script" id=1]
[ext_resource path="res://PROJETO QUIZ logo.png" type="Texture" id=2]
[ext_resource path="res://fonts/buttons40.tres" type="DynamicFont" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.0823529, 0.00784314, 0.211765, 1 )

[node name="menu" type="CanvasLayer"]
script = ExtResource( 1 )
__meta__ = {
"_edit_horizontal_guides_": [ 242.385, 392.285 ]
}

[node name="back" type="Panel" parent="."]
margin_left = -4.23792
margin_top = -2.1189
margin_right = 1275.76
margin_bottom = 817.881
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="englishQuiz" type="Sprite" parent="."]
position = Vector2( 615.846, 317.779 )
scale = Vector2( 0.237988, 0.237988 )
texture = ExtResource( 2 )

[node name="continuar" type="Button" parent="."]
visible = false
margin_left = 37.8275
margin_top = 371.164
margin_right = 246.827
margin_bottom = 495.164
custom_fonts/font = ExtResource( 3 )
text = "CONTINUAR"
flat = true

[node name="continuar2" type="Button" parent="."]
margin_left = 1076.0
margin_right = 1280.0
margin_bottom = 76.0
custom_fonts/font = ExtResource( 3 )
text = "Walie Â®"
flat = true
__meta__ = {
"_edit_lock_": true
}

[node name="novoJogo" type="Button" parent="."]
margin_left = 280.112
margin_top = 500.888
margin_right = 521.112
margin_bottom = 624.888
custom_fonts/font = ExtResource( 3 )
text = "NOVO JOGO"
flat = true

[node name="sair" type="Button" parent="."]
margin_left = 759.796
margin_top = 497.53
margin_right = 952.796
margin_bottom = 621.53
custom_fonts/font = ExtResource( 3 )
text = "SAIR"
flat = true

[connection signal="item_rect_changed" from="back" to="." method="_on_back_item_rect_changed"]
[connection signal="pressed" from="continuar" to="." method="_on_continuar_pressed"]
[connection signal="visibility_changed" from="continuar" to="." method="_on_continuar_visibility_changed"]
[connection signal="pressed" from="continuar2" to="." method="_on_redirect_liguee"]
[connection signal="pressed" from="novoJogo" to="." method="_on_novoJogo_pressed"]
[connection signal="pressed" from="sair" to="." method="_on_sair_pressed"]
